--- a/HackDuke2018-MobileApp 2/app/src/main/res/layout/activity_form2.xml
+++ b/HackDuke2018-MobileApp 2/app/src/main/res/layout/activity_form2.xml
@@ -52,7 +52,7 @@
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/textViewEmail"
+        android:id="@+id/textViewName"
         android:layout_width="89dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -65,7 +65,7 @@
         android:id="@+id/editTextEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textViewEmail"
+        android:layout_alignBottom="@+id/textViewName"
         android:layout_alignStart="@+id/editTextFirstName"
         android:ems="10"
         android:hint="Email"
