--- a/HackDuke2018-MobileApp 2/app/src/main/res/layout/activity_main.xml
+++ b/HackDuke2018-MobileApp 2/app/src/main/res/layout/activity_main.xml
@@ -2,100 +2,109 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/textViewLastName"
+    android:id="@+id/relativelayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/backgroundimage1">
 
+   <!-- <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        style="@style/HeaderBar"
+        android:elevation="4dp"
+        />-->
     <TextView
-        android:id="@+id/textViewName"
-        android:layout_width="93dp"
-        android:layout_height="37dp"
-        android:layout_alignParentStart="true"
+        android:id="@+id/title"
+        android:layout_width="241dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="131dp"
-        android:text="Name"
-        android:textColor="@android:color/black"
-        android:textSize="18dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp"
+        android:text="Work Request"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewName"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="-168dp"
-        android:layout_marginEnd="26dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="83dp"
         android:ems="10"
         android:hint="Email"
+        android:gravity="center_horizontal"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/black" />
 
-
-    <TextView
-        android:id="@+id/textViewNumber"
-        android:layout_width="90dp"
-        android:layout_height="34dp"
-        android:layout_alignBottom="@+id/editTextNumber"
-        android:layout_alignEnd="@+id/textViewName"
-        android:text="Number"
-        android:textColor="@android:color/black"
-        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextName"
-        android:layout_below="@+id/textViewName"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="146dp"
         android:ems="10"
-        android:inputType="number" />
-
-    <TextView
-        android:id="@+id/textViewZip"
-        android:layout_width="90dp"
-        android:layout_height="34dp"
-
-        android:layout_alignStart="@+id/textViewNumber"
-        android:layout_alignTop="@+id/editTextZip"
-        android:text="Zip"
-        android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:gravity="center_horizontal"
+        android:hint="Number"
+        android:inputType="number"
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/editTextZip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_alignStart="@+id/editTextNumber"
-        android:layout_below="@+id/editTextNumber"
-        android:layout_marginTop="19dp"
+        android:layout_centerInParent="true"
         android:ems="10"
-        android:inputType="number" />
-
-    <TextView
-        android:id="@+id/textViewSkill"
-        android:layout_width="90dp"
-        android:layout_height="34dp"
-
-        android:layout_alignEnd="@+id/textViewName"
-        android:layout_below="@+id/editTextZip"
-        android:layout_marginTop="17dp"
-        android:text="Skill"
-        android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:gravity="center_horizontal"
+        android:hint="Zipcode"
+        android:inputType="number"
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/editTextSkill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_alignBottom="@+id/textViewSkill"
-        android:layout_alignStart="@+id/editTextNumber"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="211dp"
         android:ems="10"
-        android:inputType="text" />
+        android:gravity="center_horizontal"
+        android:hint="Skills"
+        android:inputType="text"
+        android:visibility="invisible" />
 
+
+    <EditText
+        android:id="@+id/editTextJob"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="141dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="Job"
+        android:inputType="textMultiLine"
+        android:visibility="invisible" />
+
+
+    <EditText
+        android:id="@+id/editTextRegion1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="200dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="Region"
+        android:inputType="textPersonName"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonCreate"
@@ -103,59 +112,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="27dp"
-        android:text="Save" />
 
-    <TextView
-        android:id="@+id/textViewJob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/editTextJob"
-        android:layout_alignBottom="@+id/editTextJob"
-        android:layout_alignStart="@+id/textViewSkill"
-        android:text="Job"
-        android:textColor="@android:color/black" />
-
-    <EditText
-        android:id="@+id/editTextJob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextRegion1"
-        android:layout_below="@+id/editTextRegion1"
-        android:ems="10"
-        android:inputType="textMultiLine" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="Work Request"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textViewRegion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textViewName"
-        android:layout_below="@+id/editTextSkill"
-        android:layout_marginTop="24dp"
-        android:text="Region"
-        android:textColor="@android:color/black" />
-
-    <EditText
-        android:id="@+id/editTextRegion1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textViewRegion"
-        android:layout_alignBottom="@+id/textViewRegion"
-        android:layout_alignStart="@+id/editTextSkill"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-
+        android:layout_marginBottom="46dp"
+        android:text="Save"
+        android:visibility="invisible" />
 </RelativeLayout>
